# pyjang

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  codemeta.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: coverage.yml  tests.yml
doc/: conf.py  index.rst
examples/: antares.py  combination.py  compare.py  full_example.ipynb  simple.py  simple_notebook.ipynb  superkamiokande.py
examples/input_files/: config.yaml  detector_antares.yaml  detector_superk.yaml  effarea_superk.h5
examples/input_files/gw_catalogs/: database_example.csv
jang/: __init__.py  analysis.py  conversions.py  gw.py  limits.py  limits_differential.py  neutrinos.py  parameters.py  posteriors.py  results.py  significance.py  stacking.py
jang/stats/: __init__.py  likelihoods.py  pdfs.py  posteriors.py  priors.py  utils.py
src/jang/: __init__.py  analysis.py  gw.py  limits.py  limits_differential.py  neutrinos.py  parameters.py  results.py  significance.py  stacking.py
src/jang/analysis/: __init__.py  analysis.py  limits.py  limits_differential.py  significance.py  stacking.py
src/jang/io/: __init__.py  gw.py  neutrinos.py  parameters.py  results.py  utils.py
src/jang/stats/: __init__.py  likelihoods.py  pdfs.py  posteriors.py  priors.py  utils.py
src/jang/utils/: conversions.py
src/momenta/: __init__.py
src/momenta/io/: __init__.py  gw.py  neutrinos.py  neutrinos_irfs.py  parameters.py  transient.py
src/momenta/stats/: bayes_factor.py  constraints.py  model.py  pdfs.py  run.py
src/momenta/utils/: conversions.py  flux.py
tests/: test_examples.py  test_neutrinos.py  test_run.py  test_utils.py
workflows/: coverage.yml  tests.yml
